--- a/index.html
+++ b/index.html
@@ -188,8 +188,10 @@ Email on Acid - http://www.emailonacid.com/blog/details/C18/doctype_-_the_black_
 						<!-- poster 1 -->
 						<table cellpadding="0" cellspacing="0" border="0" align="center" width="600px">
 							<tr>
-								<td valign="top" align="center"> 
+								<td valign="top" align="center">
+								<a href="https://www.facebook.com/ShikhbeShobai/photos/a.1887735834834586.1073741828.1859879487620221/2099371227004378/?type=3&theater"> 
 									<img src="https://s33.postimg.cc/rbxhgbbfj/pos1-min.png" alt="image" style="margin: 35px 15px 10px;">
+								</a>
 								</td>
 								<td valign="top"> 
 									<h1 style="font-size: 29px;font-family: sans-serif; font-weight: bold; 
@@ -207,7 +209,9 @@ Email on Acid - http://www.emailonacid.com/blog/details/C18/doctype_-_the_black_
 						<table cellpadding="0" cellspacing="0" border="0" align="center" width="600px">
 							<tr>
 								<td valign="top" align="center"> 
+									<a href="https://www.facebook.com/ShikhbeShobai/photos/a.1887735834834586.1073741828.1859879487620221/2076356319305869/?type=3&theater">
 									<img src="https://s33.postimg.cc/tlllr1x7z/pos2-min.png" alt="image" style="margin: 20px 33px 10px;">
+									</a>
 								</td>
 								<td valign="top"> 
 									<h1 style="font-size: 29px; line-height:28px; font-family: sans-serif; 
@@ -227,7 +231,8 @@ Email on Acid - http://www.emailonacid.com/blog/details/C18/doctype_-_the_black_
 						<table cellpadding="0" cellspacing="0" border="0" align="center" width="600px">
 							<tr>
 								<td valign="top" align="center"> 
-									<img src="https://s33.postimg.cc/qhaxuh67j/pos3-min.png" alt="image" style="margin: 20px 33px 10px;">
+									<a href="https://www.facebook.com/ShikhbeShobai/photos/a.1887735834834586.1073741828.1859879487620221/2099193870355447/?type=3&theater">
+									<img src="https://s33.postimg.cc/qhaxuh67j/pos3-min.png" alt="image" style="margin: 20px 33px 10px;"></a>
 								</td>
 								<td valign="top"> 
 									<h1 style="font-size: 29px; line-height:28px;font-family: sans-serif; font-weight: bold; 
@@ -245,7 +250,8 @@ Email on Acid - http://www.emailonacid.com/blog/details/C18/doctype_-_the_black_
 						<table cellpadding="0" cellspacing="0" border="0" align="center" width="600px">
 							<tr>
 								<td valign="top" align="center"> 
-									<img src="https://s33.postimg.cc/5yg1p9fdr/pos4-min.png" alt="image" style="margin: 20px 15px 10px;">
+									<a href="https://www.facebook.com/ShikhbeShobai/photos/a.1887735834834586.1073741828.1859879487620221/2093227860952048/?type=3&theater">
+									<img src="https://s33.postimg.cc/5yg1p9fdr/pos4-min.png" alt="image" style="margin: 20px 15px 10px;"></a>
 								</td>
 								<td valign="top"> 
 									<h1 style="font-size: 29px;font-family: sans-serif; font-weight: bold; 
@@ -263,7 +269,9 @@ Email on Acid - http://www.emailonacid.com/blog/details/C18/doctype_-_the_black_
 						<table cellpadding="0" cellspacing="0" border="0" align="center" width="600px">
 							<tr>
 								<td valign="top" align="center"> 
+									<a href="https://www.facebook.com/ShikhbeShobai/photos/a.1887735834834586.1073741828.1859879487620221/2099348470339987/?type=3&theater">
 									<img src="https://s33.postimg.cc/maq3ete7z/pos5-min.png" alt="image" style="margin: 20px 15px 10px;">
+									</a>
 								</td>
 							</tr>
 						</table>
@@ -303,9 +311,9 @@ Email on Acid - http://www.emailonacid.com/blog/details/C18/doctype_-_the_black_
 						<table cellpadding="0" cellspacing="0" border="0" align="center" width="600px">
 							<tr>
 								<td valign="top" align="center" style="background-color: #b52f3d;">
-									<a href="#"><img src="https://s33.postimg.cc/i5js6lntb/fb-min.png"></a>
+									<a href="https://www.facebook.com/ShikhbeShobai/"><img src="https://s33.postimg.cc/i5js6lntb/fb-min.png"></a>
 									<a href="#"><img src="https://s33.postimg.cc/ygjw34anj/icon2-min.png"></a>
-									<a href="#"><img src="https://s33.postimg.cc/chdhfxgyn/www-min.png"></a>
+									<a href="http://www.shikhbeshobai.com/"><img src="https://s33.postimg.cc/chdhfxgyn/www-min.png"></a>
 								</td>
 							</tr>
 						</table>
